--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ egui = "0.23.0"
 egui_dock = {version = "0.8.2", features = ["serde"]}
 egui_glow = "0.23.0"
 env_logger = "0.10"
+glam = "0.24.2"
 glow = "0.12"
 serde = {version = "1.0.192", features = ["derive"]}
 serde_json = "1.0.108"
