--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ egui_glow = "0.23.0"
 env_logger = "0.10"
 glam = "0.24.2"
 glow = "0.12"
+image = "0.24.7"
+rfd = "0.12.1"
 serde = {version = "1.0.192", features = ["derive"]}
 serde_json = "1.0.108"
 
