--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,6 @@ edition = "2021"
 
 [dependencies]
 directories = "5.0.1"
-
 eframe = "0.23.0"
 egui = "0.23.0"
 egui_dock = {version = "0.8.2", features = ["serde"]}
@@ -17,6 +16,8 @@ image = "0.24.7"
 rfd = "0.12.1"
 serde = {version = "1.0.192", features = ["derive"]}
 serde_json = "1.0.108"
+egui-phosphor = "=0.3.0"
+intersection_detection = "0.1.3"
 
 [build-dependencies]
 cc = "1.0"
