--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ egui = "0.23.0"
 egui_dock = {version = "0.8.2", features = ["serde"]}
 egui_glow = "0.23.0"
 env_logger = "0.10"
-glam = "0.24.2"
+glam = {version = "0.24.2", features = ["serde"]}
 glow = "0.12"
 image = "0.24.7"
 rfd = "0.12.1"
