--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,8 @@ serde = {version = "1.0.192", features = ["derive"]}
 serde_json = "1.0.108"
 egui-phosphor = "=0.3.0"
 intersection_detection = "0.1.3"
+rgeometry = "0.9.0"
+rand = "0.8.5"
 
 [build-dependencies]
 cc = "1.0"
