--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "rust-analyzer.linkedProjects": [
         "./crates/cipollino/Cargo.toml",
         "./crates/cipollino/Cargo.toml",
+        "./crates/cipollino/Cargo.toml",
         "./crates/cipollino/Cargo.toml"
     ]
 }
