Added color palettes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "./crates/cipollino/Cargo.toml",
         "./crates/cipollino/Cargo.toml",
         "./crates/cipollino/Cargo.toml",
+        "./crates/cipollino/Cargo.toml",
         "./crates/cipollino/Cargo.toml"
     ]
 }
