--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,8 @@
         "./crates/cipollino/Cargo.toml",
         "./crates/cipollino/Cargo.toml",
         "./crates/cipollino/Cargo.toml",
+        "./crates/cipollino/Cargo.toml",
+        "./crates/cipollino/Cargo.toml",
         "./crates/cipollino/Cargo.toml"
     ]
 }
