Cleaned up scene panel

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,8 @@
         "./crates/cipollino/Cargo.toml",
         "./crates/cipollino/Cargo.toml",
         "./crates/cipollino/Cargo.toml",
+        "./crates/cipollino/Cargo.toml",
+        "./crates/cipollino/Cargo.toml",
         "./crates/cipollino/Cargo.toml"
     ]
 }
