--- a/crates/cipollino/Cargo.toml
+++ b/crates/cipollino/Cargo.toml
@@ -29,6 +29,7 @@ minimp3_fixed = "0.5.4"
 pathdiff = "0.2.1"
 wav = "1.0.0"
 ffmpeg = {git = "https://github.com/meh/rust-ffmpeg.git", rev = "7c354aa", features = ["build", "build-license-gpl", "build-lib-x264"]}
+unique-type-id = "1.3.0"
 
 [build-dependencies]
 cc = "1.0"
