--- a/crates/cipollino/Cargo.toml
+++ b/crates/cipollino/Cargo.toml
@@ -30,6 +30,7 @@ pathdiff = "0.2.1"
 wav = "1.0.0"
 ffmpeg = {git = "https://github.com/meh/rust-ffmpeg.git", rev = "7c354aa", features = ["build", "build-license-gpl", "build-lib-x264"]}
 unique-type-id = "1.3.0"
+egui_extras = {version = "*", features = ["all_loaders"]}
 
 [build-dependencies]
 cc = "1.0"
