--- a/crates/cipollino/Cargo.toml
+++ b/crates/cipollino/Cargo.toml
@@ -32,6 +32,7 @@ ffmpeg = {git = "https://github.com/meh/rust-ffmpeg.git", rev = "7c354aa", featu
 unique-type-id = "1.3.0"
 egui_extras = {version = "*", features = ["all_loaders"]}
 bson = "2.9.0"
+walkdir = "2.5.0"
 
 [build-dependencies]
 cc = "1.0"
