--- a/crates/cipollino/Cargo.toml
+++ b/crates/cipollino/Cargo.toml
@@ -28,7 +28,6 @@ sha2 = "0.10"
 minimp3_fixed = "0.5.4"
 pathdiff = "0.2.1"
 wav = "1.0.0"
-ffmpeg = {git = "https://github.com/meh/rust-ffmpeg.git", rev = "7c354aa", features = ["build", "build-license-gpl", "build-lib-x264"]}
 unique-type-id = "1.3.0"
 egui_extras = {version = "*", features = ["all_loaders"]}
 bson = "2.9.0"
@@ -37,3 +36,4 @@ include-lines = "1.1.2"
 
 [build-dependencies]
 cc = "1.0"
+walkdir = "2.5.0"
